tests/regression/error/hw5_error01.sml
val prog =
  PROGRAM
    {classes=[],decls=[],funcs=[],
     stmts=[ST_EXP {exp=EXP_CALL {args=[EXP_NUM 2],func=EXP_NUM 2}}]}
  : program
;
